# scribes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml
scribes/: cli.py  clone.py  commands.py  config.py  executor.py  utils.py
tests/: conftest.py  test_cli.py  test_clone.py
