[tool.poetry]
name = "scribes"
version = "0.1.1"
description = ""
authors = ["Armand Sauzay <35524799+armand-sauzay@users.noreply.github.com>"]
repository = "https://github.com/armand-sauzay/scribes"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
click = "8.1.7"
pydantic = "2.8.2"


[tool.poetry.group.test.dependencies]
pytest = "7.4.2"
pytest-mock = "3.11.1"

[tool.poetry.scripts]
scribes = "scribes.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
